Bug 1890357 - Make JumpListBuilder resilient to E_ACCESSDENIED from ICustomDestinationList::AppendCategory. r=rkraesig,win-reviewers,arai

Differential Revision: https://phabricator.services.mozilla.com/D209558